add delete and update journals (#34)
